# httpstatusx

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
httpstatusx/: __init__.py
tests/: test_frameworks.py
