[project]
name = "httpstatusx"
version = "1.0.0"
description = "Semantic, bidirectional HTTP status abstraction with CLI and framework support"
authors = [{name="Koda Adam", email="adam.koda2995@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = ["colorama"]

[project.urls]
Homepage = "https://github.com/Adamkoda2306/httpstatusx"
Issues = "https://github.com/Adamkoda2306/httpstatusx/issues"

[project.scripts]
httpstatusx = "httpstatusx.cli:main"
